# neural-network-from-scratch-cpp

./: .gitignore  CMakeLists.txt  File Structure  File Structure   GitHub Actions (ci.yml)  LICENSE  NueralNetCPP  README.md  css
.github/workflows/: ci.yml
docs/: benchmarks.md
examples/: synthetic_dataset.csv
src/: CMakeLists.txt  main.cpp
src/core/: Activation.hpp  Layer.hpp  Loss.hpp  NeuralNet.hpp
src/impl/: Activations.cpp  Activations.hpp  CSVLoader.cpp  CSVLoader.hpp  DenseLayer.cpp  DenseLayer.hpp  Losses.cpp  Losses.hpp  NeuralNet.cpp
tests/: CMakeLists.txt  test_network.cpp
